--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@stream-io/video-react-sdk": "^1.14.4",
     "@tanstack/react-query": "^5.74.4",
     "axios": "^1.8.4",
     "lucide-react": "^0.503.0",
+    "next": "^15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
-    "react-router": "^7.5.1",
+    "react-router": "^7.6.0",
+    "react-router-dom": "^7.6.0",
     "stream-chat": "^8.60.0",
     "stream-chat-react": "^12.14.0",
     "zustand": "^5.0.3"
