--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,46 @@
 version: '3.8'
 
 services:
+  # ── Redis ──────────────────────────────────────────────
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+    command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+    restart: unless-stopped
+
+  # ── Backend (scalable replicas) ────────────────────────
   backend:
     build: ./backend
     ports:
       - "5001:5001"
     env_file:
       - ./backend/.env
+    environment:
+      - REDIS_URL=redis://redis:6379
     volumes:
       - ./backend:/usr/src/app
       - /usr/src/app/node_modules
+    depends_on:
+      redis:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "node", "-e", "fetch('http://localhost:5001/api/health').then(r => r.ok ? process.exit(0) : process.exit(1)).catch(() => process.exit(1))"]
+      interval: 15s
+      timeout: 5s
+      retries: 3
     restart: unless-stopped
+    deploy:
+      replicas: 2
 
+  # ── Frontend (Vite dev server) ─────────────────────────
   frontend:
     build: ./frontend
     ports:
@@ -21,3 +50,19 @@ services:
       - /usr/src/app/node_modules
     depends_on:
       - backend
+    restart: unless-stopped
+
+  # ── Nginx Load Balancer ────────────────────────────────
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - backend
+      - frontend
+    restart: unless-stopped
+
+volumes:
+  redis_data:
